# sc2cast

./: .gitignore  CLEANUP.md  CURRENT_SPRINT.md  Dockerfile  README.md  WORKFLOW.md  analyze_events.py  check_deaths.py  check_events.py  check_locations.py  debug_events.py  docker-compose.yml  pyproject.toml  show_battles.py  show_script.py  test_sc2reader_debug.py
docs/: CODE_EXAMPLES.md  FAQ.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  QUICK_START.md  TECHNICAL.md  TECHNICAL_DEEP_DIVE.md  ZERO_BUDGET_APPROACH.md
docs/design/: ARCHITECTURE.md  FAQ_TECHNICAL_PANEL.md  PANEL_PRESENTATION.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICK_START.md
docs/dev/: CURRENT_SPRINT.md  DEVLOG.md  WORKFLOW.md
output/: replay_events.json  replay_metadata.json
replays/: 4323200_changeling_Mike_MagannathaAIE_v2.SC2Replay
src/: parse_replay.py
src/sc2cast/: __init__.py  camera_director.py  event_based_pipeline.py  event_extractor.py  event_prioritizer.py  game_clock.py  minimap_camera.py  observer_hotkeys.py  recording_pipeline.py  replay_controller.py  replay_loader.py  replay_parser.py  script_generator.py  synthetic_events.py  timer_reader.py  verify_sc2.py
tests/: test_camera_recording.py  test_camera_recording_bot.py  test_easyocr_timer.py  test_fullscreen_timer.py  test_keyboard_automation.py  test_minimap_camera.py  test_ocr_timer.py  test_replay_time.py  test_screen_capture.py  test_time_detection_methods.py
